# Vibefilming

./: .gitignore  DIRECTOR_GUIDE.md  README.md  agent_loop.py  agentmain.py  demo.md  ga  ga.py  llmcore.py  mykey.example.py  pyproject.toml  setup.sh  vibefilming.config.example.json
assets/: code_run_header.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  insight_fixed_structure.txt  insight_fixed_structure_en.txt  sys_prompt_film.txt  sys_prompt_film_zls.txt  tools_schema_film.json
docs/: GETTING_STARTED.md  installation.md  installation_zh.md  macos_desktop_installation_zh.md
film/: ADDING_TOOLS.md  film_sdk.py  tools.py  workspace.py
frontends/: qtapp.py  review_cmd.py
plugins/: cozeloop_tracing.py
skills/: film_facts.md  goal_hive_sop.md  ljqCtrl.py  ljqCtrl_sop.md  memory_management_sop.md  plan_sop.md  review_sop.md  subagent.md  ui_detect.py  vibefilming_shortvideo_sop.md
skills/autonomous_operation_sop/: helper.py
skills/review_sop/: review_inline_prompt.en.txt  review_inline_prompt.txt
skills/skill_ad/: SKILL.md
skills/skill_async_schedule/: SKILL.md  description.md  skill_async_schedule.md
smoke_tests/: _common.py  run_all.py  test_03_seedream_t2i.py  test_04_seedream_i2i.py  test_05_seedance_t2v.py  test_11_seedance_prompt_symbols.py  test_12_cozeloop_tracing.py  test_13_seedance_4k_resolution.py  test_14_summary_only_autocontinue.py  test_15_llm_truncation_autocontinue.py  test_16_vlm_video_proxy.py  test_17_context_anchor_preservation.py  test_18_project_phase_update.py  test_19_skill_file_full_load.py
(+31 files in other folders)
