# AI install hint: choose deps by OS/env + needed ui/bot. do NOT install all.
# minimal core first; missing packages can be installed on demand.

[project]
name = "vibefilming"
version = "0.1.0"
description = "AI film director agent for autonomous short video production"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "bottle>=0.12",
    "simple-websocket-server>=0.4",
    "aiohttp>=3.9",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
# select extras, not all. match current task/env.
# examples: install .[feishu] only when the Feishu bot frontend is needed.
ui = [
    "pillow>=9.0",
]
feishu = [
    "lark-oapi>=1.0",
]
cozeloop = [
    "cozeloop>=0.1.28,<0.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["ga_cli"]

[project.scripts]
vibefilming = "ga_cli.cli:main"
